<resources>
    <string name="app_name">Fotoclima</string>

    <string name="Menu">Menú</string>

    <string name="Iniciar">Iniciar</string>
    <string name="Actualizar">Actualizar</string>
    <string name="Detener">Detener</string>
    <string name="Configuracion">Configuración</string>
    <string name="Compartir">Compartir</string>
    <string name="Ayuda">Ayuda</string>
    <string name="Usuario">Usuario</string>
    <string name="Clave">Clave</string>
    <string name="Eiminar_registros">Eliminar registros</string>
    <string name="Espere">Espere...</string>
    <string name="Contactos">Contactos</string>


    <string name="Opciones">Opciones</string>
    <string name="Guardar">Guardar</string>
    <string name="Cancelar">Cancelar</string>
    <string name="Editar">Editar</string>
    <string name="Registros">Registros</string>
    <string name="Cerrar_sesion">Cerrar Sesión</string>
    <string name="Salir">Salir</string>

    <string name="Cerrar">Cerrar</string>


    <string name="txt_licencia">
		This program is free software: you can redistribute it and/or modify
		it under the terms of the GNU General Public License as published by
		the Free Software Foundation, either version 3 of the License, or
		(at your option) any later version. \n

		This program is distributed in the hope that it will be useful,
		but WITHOUT ANY WARRANTY; without even the implied warranty of
		MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
		GNU General Public License for more details. \n

		You should have received a copy of the GNU General Public License
		along with this program.  If not, see http://www.gnu.org/licenses/ \n
    </string>






    <string name="txt_firma">
        Hecho en Argentina por Javier Martínez
    </string>



<string name="traducido_por"></string>


    <string name="Hace_una_donacion">Hacé una donación :)</string>
    <string name="Colabora">Colabora (:</string>
    <string name="Proyectos">Proyectos</string>

    <string name="Ir_al_sitio">Ir al sitio</string>
    <string name="Ir_al_canal_de_telegram">Visita el canal</string>


    <string name="txt_ayuda_descripcion">
        Obtiene el clima usando el GPS. \n
        \n
        Obtiene información del clima de https://openweathermap.org/ \n
        Utiliza recursos (fotografías) de https://unsplash.com/ \n


    </string>


</resources>
